# unix_domain_socket_client

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
uds/: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  autogen.sh  config.h  config.status  configure  configure.ac  libtool
uds/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
uds/po/: Makefile  Makefile.in
uds/src/: Makefile  Makefile.am  Makefile.in  check_socket.c  main.c  uds.h
uds/src/.deps/: check_socket.Po  main.Po
