# @info   gen_c_pro ver.1.0
# @author Vladimir Roncevic <elektron.ronca@gmail.com>
# @brief  Process this file with automake to produce Makefile.in.

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS = \
	-Wall \
	-g

bin_PROGRAMS = uds

uds_SOURCES = \
	check_socket.c \
	main.c

uds_LDFLAGS = 

uds_LDADD = 

